fixed margin alignment issue

--- a/app/css/lineman-plus-rails.sass
+++ b/app/css/lineman-plus-rails.sass
@@ -245,7 +245,6 @@ h1.mobile-title
 
 footer
   width: 100%
-  margin: 60px 0 0
   padding: 0 0 30px
 
 .octocat
@@ -308,7 +307,6 @@ footer
     margin: auto
 
   footer
-    margin: 30px 0 0
     padding: 0 0 60px
 
   .code-spacer
